<resources>
    <string name="app_name">BingeShopper</string>
    <string name="books">Books</string>
    <string name="fashion">Fashion</string>
    <string name="electronics">Electronics</string>


    <!-- Strings related to LoginUser -->
    <string name="login_instruction">Please login to continue using ADC</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_username">Something wrong with this username. Please retype.</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_cred">The username and password is not correct. Please retype and press login.</string>
    <string name="error_login_no_internet">No internet connection. Please reconnect and login again.</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="user_name">User Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="sorry_no_seller_found_with_requested_quantity_please_change_the_quantity_or_choose_another_product">Sorry No Seller found with requested quantity! Please change the quantity or choose another product</string>
    <string name="no_item_in_the_cart">No Item in the cart</string>


    <string-array name="usertype_array">
        <item>Buyer</item>
        <item>Seller</item>

    </string-array>

</resources>
