<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/books"
            style="@style/HomeFragmentTabs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/olive_green">

            <ImageView
                android:id="@+id/books_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/books_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/books"
                android:textColor="@color/white"
                android:textSize="36sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fashion"
            style="@style/HomeFragmentTabs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/yellow">

            <ImageView
                android:id="@+id/fashion_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/fashion_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/fashion"
                android:textColor="@color/white"
                android:textSize="36sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/electronics"
            style="@style/HomeFragmentTabs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/pink">

            <ImageView
                android:id="@+id/electronics_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/electronics_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/electronics"
                android:textColor="@color/white"
                android:textSize="36sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</layout>
